// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField renders properly with label 1`] = `
<FormGroup
  controlId="name"
>
  <FormLabel
    column={false}
    srOnly={false}
  >
    label
  </FormLabel>
  <FormControl
    name="name"
    onChange={[Function]}
    value="value"
  />
</FormGroup>
`;

exports[`InputField renders properly without label 1`] = `
<FormGroup
  controlId="name"
>
  <FormControl
    name="name"
    onChange={[Function]}
    value="value"
  />
</FormGroup>
`;
